src/test/compile-fail/keyword.rs
mod break {
    //~^ ERROR found `break` in ident position
}